--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </section>
     <footer>
       <script src="weather.js"></script>
+<a href="https://tubular-fairy-63fc6f.netlify.app/"> Hosted in Netlify</a>
     </footer>
   </body>
 </html>
